fixed janky safari stretch issue

--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ h3{
     margin-bottom:10px;
 }
 footer{
+    align-items: flex-start;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
